--- a/addressbook/src/main/resources/it/unisa/diem/View/AddressBookView.fxml
+++ b/addressbook/src/main/resources/it/unisa/diem/View/AddressBookView.fxml
@@ -4,6 +4,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
@@ -20,11 +21,11 @@
         <URL value="@/it/unisa/diem/Styles/addressbookview.css" />
     </stylesheets>
    <children>
-      <SplitPane dividerPositions="0.17307692307692307" layoutX="118.0" layoutY="104.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <SplitPane dividerPositions="0.21819196428571433" layoutX="118.0" layoutY="104.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
           <AnchorPane maxWidth="200.0" minHeight="0.0" minWidth="100.0" prefHeight="398.0" prefWidth="138.0" SplitPane.resizableWithParent="false">
                <children>
-                  <VBox alignment="CENTER_LEFT" spacing="10.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+                  <VBox prefHeight="1000.0" spacing="10.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
                      <children>
                         <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="200.0" style="-fx-border-radius: 15; -fx-background-radius: 15;" text="Contacts" VBox.vgrow="ALWAYS">
                            <font>
@@ -45,7 +46,7 @@
                               <Insets left="1.0" right="20.0" />
                            </VBox.margin>
                         </Text>
-                        <ListView opacity="0.0" prefHeight="398.0" prefWidth="80.0" />
+                        <ListView maxHeight="1.7976931348623157E308" opacity="0.0" prefHeight="800.0" prefWidth="107.0" />
                         <Button alignment="CENTER" mnemonicParsing="false" prefWidth="200.0" style="-fx-border-radius: 15; -fx-background-radius: 15;" text="Bin" VBox.vgrow="ALWAYS">
                            <font>
                               <Font name="Helvetica Bold" size="13.0" />
@@ -59,18 +60,30 @@
                </children></AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <SplitPane dividerPositions="0.4161554192229039" layoutX="97.0" layoutY="98.0" prefHeight="398.0" prefWidth="416.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <SplitPane dividerPositions="0.5" layoutX="93.33333333333333" layoutY="98.0" prefHeight="397.0" prefWidth="398.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <items>
-                      <AnchorPane minHeight="0.0" minWidth="200.0" prefWidth="349.0">
+                      <AnchorPane maxWidth="700.0" minHeight="0.0" minWidth="200.0" prefWidth="349.0">
                            <children>
                               <VBox layoutX="53.0" layoutY="73.0" prefHeight="396.0" prefWidth="219.0" spacing="7.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <children>
-                                    <TextField id="searchBar" fx:id="searchBar" maxHeight="-Infinity" maxWidth="400.0" prefHeight="26.0" promptText="Search" style="-fx-background-radius: 15; -fx-border-radius: 15;">
-                                       <VBox.margin>
-                                          <Insets left="7.0" right="7.0" />
-                                       </VBox.margin>
-                                    </TextField>
-                                    <ListView prefHeight="411.0" prefWidth="219.0" />
+                                    <HBox maxWidth="1000.0" prefHeight="25.0" prefWidth="745.0">
+                                       <children>
+                                          <ImageView fitHeight="27.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@resources/AddressBook/search.png" />
+                                             </image>
+                                             <HBox.margin>
+                                                <Insets bottom="5.0" left="5.0" right="2.0" />
+                                             </HBox.margin>
+                                          </ImageView>
+                                          <TextField id="searchBar" fx:id="searchBar" maxHeight="-Infinity" maxWidth="400.0" minWidth="100.0" prefHeight="26.0" prefWidth="225.0" promptText="Search" style="-fx-background-radius: 15; -fx-border-radius: 15;" HBox.hgrow="ALWAYS">
+                                             <HBox.margin>
+                                                <Insets right="5.0" />
+                                             </HBox.margin>
+                                          </TextField>
+                                       </children>
+                                    </HBox>
+                                    <ListView maxHeight="1.7976931348623157E308" prefHeight="1000.0" prefWidth="219.0" />
                                  </children>
                                  <padding>
                                     <Insets top="10.0" />
@@ -78,10 +91,41 @@
                               </VBox>
                            </children>
                         </AnchorPane>
-                      <AnchorPane minHeight="0.0" minWidth="-Infinity" prefHeight="396.0" prefWidth="154.0" SplitPane.resizableWithParent="false">
+                      <AnchorPane maxWidth="700.0" minHeight="0.0" prefHeight="396.0" prefWidth="154.0" SplitPane.resizableWithParent="false">
                            <children>
                               <VBox alignment="CENTER" layoutX="14.0" layoutY="73.0" prefHeight="396.0" prefWidth="163.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <children>
+                                    <ButtonBar onMouseEntered="#handleMouseEntered" onMouseExited="#handleMouseExited" prefHeight="27.0" prefWidth="315.0" style="-fx-background-radius: 20; -fx-border-radius: 20;" VBox.vgrow="ALWAYS">
+                                       <buttons>
+                                          <Button alignment="CENTER" minWidth="8.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="200.0" style="-fx-border-radius: 15; -fx-background-radius: 15;" text="Add">
+                                             <font>
+                                                <Font name="Helvetica Bold" size="13.0" />
+                                             </font>
+                                             <cursor>
+                                                <Cursor fx:constant="HAND" />
+                                             </cursor>
+                                          </Button>
+                                          <Button alignment="CENTER" minWidth="14.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="200.0" style="-fx-border-radius: 15; -fx-background-radius: 15;" text="Add">
+                                             <font>
+                                                <Font name="Helvetica Bold" size="13.0" />
+                                             </font>
+                                             <cursor>
+                                                <Cursor fx:constant="HAND" />
+                                             </cursor>
+                                          </Button>
+                                          <Button alignment="CENTER" mnemonicParsing="false" prefWidth="200.0" style="-fx-border-radius: 15; -fx-background-radius: 15;" text="Add">
+                                             <font>
+                                                <Font name="Helvetica Bold" size="13.0" />
+                                             </font>
+                                             <cursor>
+                                                <Cursor fx:constant="HAND" />
+                                             </cursor>
+                                          </Button>
+                                       </buttons>
+                                       <VBox.margin>
+                                          <Insets />
+                                       </VBox.margin>
+                                    </ButtonBar>
                                     <ImageView fitHeight="120.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
                                           <Image url="@../../../../../../../../../../../Pictures/foto_gorilla.jpeg" />
