--- a/addressbook/src/main/resources/it/unisa/diem/View/AddressBookView.fxml
+++ b/addressbook/src/main/resources/it/unisa/diem/View/AddressBookView.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
@@ -15,10 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" minHeight="200.0" minWidth="300.0" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unisa.diem.Controller.AddressBookController">
-    <stylesheets>
-        <URL value="@/it/unisa/diem/Styles/addressbookview.css" />
-    </stylesheets>
+<AnchorPane id="AnchorPane" minHeight="200.0" minWidth="300.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unisa.diem.Controller.AddressBookController">
    <children>
       <SplitPane dividerPositions="0.21819196428571433" layoutX="118.0" layoutY="104.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
@@ -101,26 +97,50 @@
                                     </ImageView>
                                     <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                                        <children>
-                                          <TextField fx:id="surnameField" editable="false" />
-                                          <TextField fx:id="nameField" editable="false" />
+                                          <TextField fx:id="surnameField" editable="false">
+                                             <HBox.margin>
+                                                <Insets left="20.0" right="5.0" />
+                                             </HBox.margin></TextField>
+                                          <TextField fx:id="nameField" editable="false">
+                                             <HBox.margin>
+                                                <Insets left="5.0" right="20.0" />
+                                             </HBox.margin></TextField>
                                        </children>
                                     </HBox>
                                     <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                                        <children>
-                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="La togliamo ?" />
-                                          <ListView fx:id="phoneList" prefHeight="200.0" prefWidth="200.0" />
+                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="phones ">
+                                             <HBox.margin>
+                                                <Insets left="10.0" right="5.0" />
+                                             </HBox.margin></Text>
+                                          <ListView fx:id="phoneList" prefHeight="200.0" prefWidth="200.0">
+                                             <HBox.margin>
+                                                <Insets right="10.0" />
+                                             </HBox.margin></ListView>
                                        </children>
                                     </HBox>
                                     <HBox alignment="CENTER" layoutX="10.0" layoutY="278.0" prefHeight="100.0" prefWidth="200.0">
                                        <children>
-                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Email:" />
-                                          <ListView fx:id="emailList" prefHeight="200.0" prefWidth="200.0" />
+                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="emails ">
+                                             <HBox.margin>
+                                                <Insets left="10.0" right="5.0" />
+                                             </HBox.margin></Text>
+                                          <ListView fx:id="emailList" prefHeight="200.0" prefWidth="200.0">
+                                             <HBox.margin>
+                                                <Insets right="10.0" />
+                                             </HBox.margin></ListView>
                                        </children>
                                     </HBox>
                                     <HBox alignment="CENTER" layoutX="10.0" layoutY="324.0" prefHeight="100.0" prefWidth="200.0">
                                        <children>
-                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Tags:" />
-                                          <ListView fx:id="tagList" prefHeight="200.0" prefWidth="200.0" />
+                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="tags ">
+                                             <HBox.margin>
+                                                <Insets left="10.0" right="5.0" />
+                                             </HBox.margin></Text>
+                                          <ListView fx:id="tagList" prefHeight="200.0" prefWidth="200.0">
+                                             <HBox.margin>
+                                                <Insets right="10.0" />
+                                             </HBox.margin></ListView>
                                        </children>
                                     </HBox>
                                     <HBox alignment="BOTTOM_CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
