--- a/addressbook/src/main/resources/it/unisa/diem/View/AddressBookView.fxml
+++ b/addressbook/src/main/resources/it/unisa/diem/View/AddressBookView.fxml
@@ -10,11 +10,12 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" minHeight="200.0" minWidth="300.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unisa.diem.Controller.AddressBookController">
+<AnchorPane id="AnchorPane" minHeight="200.0" minWidth="300.0" prefHeight="400.0" prefWidth="600.0" stylesheets="@addressBookStyle.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unisa.diem.Controller.AddressBookController">
    <children>
       <SplitPane dividerPositions="0.21819196428571433" layoutX="118.0" layoutY="104.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
@@ -94,6 +95,9 @@
                                        <VBox.margin>
                                           <Insets top="40.0" />
                                        </VBox.margin>
+                                       <image>
+                                          <Image url="@../../../../../../test/resources/profile_pictures/briciola.JPEG" />
+                                       </image>
                                     </ImageView>
                                     <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                                        <children>
@@ -143,29 +147,64 @@
                                              </HBox.margin></ListView>
                                        </children>
                                     </HBox>
-                                    <HBox alignment="BOTTOM_CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+                                    <StackPane prefHeight="150.0" prefWidth="200.0">
                                        <children>
-                                          <Button fx:id="addButton" alignment="CENTER" mnemonicParsing="false" onAction="#onAdd" onMouseClicked="#onAdd" prefWidth="200.0" style="-fx-border-radius: 15; -fx-background-radius: 15;" text="Add">
-                                             <font>
-                                                <Font name="Helvetica Bold" size="13.0" />
-                                             </font>
-                                             <cursor>
-                                                <Cursor fx:constant="HAND" />
-                                             </cursor>
-                                          </Button>
-                                          <Button alignment="CENTER" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefWidth="200.0" style="-fx-border-radius: 15; -fx-background-radius: 15;" text="Edit">
-                                             <font>
-                                                <Font name="Helvetica Bold" size="13.0" />
-                                             </font>
-                                             <cursor>
-                                                <Cursor fx:constant="HAND" />
-                                             </cursor>
-                                          </Button>
+                                          <HBox alignment="BOTTOM_CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+                                             <children>
+                                                <Button fx:id="editButton" alignment="CENTER" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#onEdit" prefWidth="200.0" style="-fx-border-radius: 15; -fx-background-radius: 15;" text="Edit">
+                                                   <font>
+                                                      <Font name="Helvetica Bold" size="13.0" />
+                                                   </font>
+                                                   <cursor>
+                                                      <Cursor fx:constant="HAND" />
+                                                   </cursor>
+                                                </Button>
+                                                <Button fx:id="addButton" alignment="CENTER" mnemonicParsing="false" onAction="#onAdd" onMouseClicked="#onAdd" prefWidth="200.0" style="-fx-border-radius: 15; -fx-background-radius: 15;" text="Add">
+                                                   <font>
+                                                      <Font name="Helvetica Bold" size="13.0" />
+                                                   </font>
+                                                   <cursor>
+                                                      <Cursor fx:constant="HAND" />
+                                                   </cursor>
+                                                </Button>
+                                             </children>
+                                             <padding>
+                                                <Insets bottom="5.0" left="10.0" right="10.0" />
+                                             </padding>
+                                          </HBox>
+                                          <HBox alignment="BOTTOM_CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+                                             <children>
+                                                <Button fx:id="cancelButton" alignment="CENTER" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefWidth="200.0" style="-fx-border-radius: 15; -fx-background-radius: 15;" text="Cancel" visible="false">
+                                                   <font>
+                                                      <Font name="Helvetica Bold" size="13.0" />
+                                                   </font>
+                                                   <cursor>
+                                                      <Cursor fx:constant="HAND" />
+                                                   </cursor>
+                                                </Button>
+                                                <Button fx:id="deleteButton" alignment="CENTER" mnemonicParsing="false" onAction="#onAdd" onMouseClicked="#onAdd" prefWidth="200.0" style="-fx-border-radius: 15; -fx-background-radius: 15;" text="Delete" visible="false">
+                                                   <font>
+                                                      <Font name="Helvetica Bold" size="13.0" />
+                                                   </font>
+                                                   <cursor>
+                                                      <Cursor fx:constant="HAND" />
+                                                   </cursor>
+                                                </Button>
+                                                <Button fx:id="saveButton" alignment="CENTER" mnemonicParsing="false" prefWidth="200.0" style="-fx-border-radius: 15; -fx-background-radius: 15;" text="Save" visible="false">
+                                                   <font>
+                                                      <Font name="Helvetica Bold" size="13.0" />
+                                                   </font>
+                                                   <cursor>
+                                                      <Cursor fx:constant="HAND" />
+                                                   </cursor>
+                                                </Button>
+                                             </children>
+                                             <padding>
+                                                <Insets bottom="5.0" left="10.0" right="10.0" />
+                                             </padding>
+                                          </HBox>
                                        </children>
-                                       <padding>
-                                          <Insets bottom="5.0" left="10.0" right="10.0" />
-                                       </padding>
-                                    </HBox>
+                                    </StackPane>
                                  </children></VBox>
                            </children></AnchorPane>
                     </items>
