--- a/addressbook/src/main/resources/it/unisa/diem/ProfileSelectionView.fxml
+++ b/addressbook/src/main/resources/it/unisa/diem/ProfileSelectionView.fxml
@@ -1,14 +1,21 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
 <?fxml version="1.0" encoding="UTF-8"?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Tooltip?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unisa.diem.Controller.ProfileSelectionController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unisa.diem.Controller.ProfileSelectionController">
    <center>
       <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="804.0" prefWidth="1558.0" BorderPane.alignment="CENTER">
          <children>
@@ -16,17 +23,17 @@
                <children>
                   <AnchorPane fx:id="emptyListPromptPane" prefHeight="200.0" prefWidth="200.0" visible="false">
                      <children>
-                        <Label alignment="CENTER" contentDisplay="RIGHT" layoutX="315.0" layoutY="396.0" prefHeight="52.0" prefWidth="945.0" text="Non hai ancora creato nessun profilo. Inizia qui il tuo viaggio." textAlignment="CENTER" textOverrun="CLIP" wrapText="true">
+                        <Label alignment="CENTER" contentDisplay="RIGHT" layoutX="315.0" layoutY="396.0" prefHeight="52.0" prefWidth="945.0" text="You haven't created any profile yet. Start your journey here!" textAlignment="CENTER" textOverrun="CLIP" wrapText="true">
                            <font>
                               <Font size="35.0" />
                            </font>
                         </Label>
-                        <Button fx:id="firstProfileButton" layoutX="501.0" layoutY="456.0" mnemonicParsing="false" onAction="#onAdd" prefHeight="135.0" prefWidth="550.0" text="Crea un nuovo profilo">
+                        <Button fx:id="firstProfileButton" layoutX="501.0" layoutY="456.0" mnemonicParsing="false" onAction="#onAdd" prefHeight="135.0" prefWidth="550.0" text="Create a new Profile">
                            <font>
                               <Font size="50.0" />
                            </font>
                         </Button>
-                        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="489.0" layoutY="168.0" prefHeight="100.0" prefWidth="586.0" text="Seleziona un profilo" textAlignment="CENTER">
+                        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="489.0" layoutY="168.0" prefHeight="100.0" prefWidth="586.0" text="Select a Profile" textAlignment="CENTER">
                            <font>
                               <Font name="Corbel" size="57.0" />
                            </font>
@@ -101,25 +108,25 @@
                   </AnchorPane>
                   <AnchorPane fx:id="profileSelectionPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="774.0" prefWidth="1568.0" StackPane.alignment="CENTER">
                      <children>
-                        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="483.0" layoutY="159.0" prefHeight="100.0" prefWidth="586.0" text="Seleziona un profilo" textAlignment="CENTER" AnchorPane.leftAnchor="500.0" AnchorPane.rightAnchor="500.0">
+                        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="483.0" layoutY="159.0" prefHeight="100.0" prefWidth="586.0" text="Select a Profile" textAlignment="CENTER" AnchorPane.leftAnchor="500.0" AnchorPane.rightAnchor="500.0">
                            <font>
                               <Font name="Corbel" size="57.0" />
                            </font>
                         </Label>
                         <Label alignment="CENTER" contentDisplay="CENTER" layoutX="472.0" layoutY="53.0" prefHeight="113.0" prefWidth="619.0" text="Welcome back" textAlignment="CENTER" AnchorPane.leftAnchor="472.0" AnchorPane.rightAnchor="472.0">
                            <font>
-                              <Font name="Corbel" size="96.0" />
+                              <Font size="80.0" />
                            </font>
                         </Label>
                         <HBox fx:id="profileSelectionBox" alignment="CENTER" fillHeight="false" layoutX="352.0" layoutY="275.0" prefHeight="330.0" prefWidth="859.0" spacing="2.0" AnchorPane.leftAnchor="352.0" AnchorPane.rightAnchor="352.0" />
-                        <HBox fx:id="addButtonPane" fillHeight="false" layoutX="1229.0" layoutY="89.0" onMouseClicked="#onAdd" prefHeight="58.0" prefWidth="250.0" style="-fx-background-color: #dce5f2;">
+                        <HBox fx:id="addButtonPane" fillHeight="false" layoutX="1105.0" layoutY="89.0" onMouseClicked="#onAdd" prefHeight="58.0" prefWidth="250.0">
                            <children>
                               <ImageView fitHeight="58.0" fitWidth="76.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../../../../../../assets/view_resources/plus_button.png" />
                                  </image>
                               </ImageView>
-                              <Label prefHeight="58.0" prefWidth="179.0" text="Add profile">
+                              <Label prefHeight="66.0" prefWidth="186.0" text="Add profile">
                                  <font>
                                     <Font size="34.0" />
                                  </font>
