--- a/addressbook/src/main/resources/it/unisa/diem/ProfileView.fxml
+++ b/addressbook/src/main/resources/it/unisa/diem/ProfileView.fxml
@@ -9,7 +9,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="314.0" prefWidth="270.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="199.0" prefWidth="151.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="247.0" prefWidth="193.0" StackPane.alignment="CENTER">
          <children>
@@ -25,7 +25,7 @@
             </Rectangle>
             <VBox fx:id="rect" alignment="CENTER" layoutX="18.0" layoutY="20.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="207.0" prefWidth="158.0">
                <children>
-                  <ImageView fx:id="profilePicture" fitHeight="126.0" fitWidth="127.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="profilePicture" fitHeight="126.0" fitWidth="108.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../../../../../assets/view_resources/default_picture.png" />
                      </image>
@@ -33,7 +33,7 @@
                         <Insets />
                      </VBox.margin>
                   </ImageView>
-                  <Label fx:id="nameLabel" alignment="CENTER" prefHeight="47.0" prefWidth="211.0" text="Name" textAlignment="CENTER">
+                  <Label fx:id="nameLabel" alignment="CENTER" prefHeight="47.0" prefWidth="211.0" text="Name" textAlignment="CENTER" wrapText="true">
                      <font>
                         <Font size="25.0" />
                      </font>
