--- a/addressbook/src/main/resources/it/unisa/diem/styles.css
+++ b/addressbook/src/main/resources/it/unisa/diem/styles.css
@@ -1,4 +1,5 @@
 .button {
+    -fx-font-size: 20;
     -fx-background-color: lightblue;
     background-color: lightblue;
     -fx-border-color: black; 
@@ -12,12 +13,27 @@
     -fx-effect: dropshadow(gaussian, rgba(52, 152, 219, 0.7), 15, 0.4, 0, 0); 
 }
 
+
 .list-cell {
     -fx-background-color: transparent;
 }
 .list-view {
     -fx-background-color: transparent;
 }
+
+#exportButton{
+    -fx-font-size: 14;
+}
+
+#importButton{
+    -fx-font-size: 14;
+}
+
+
+#profilesButton{
+    -fx-font-size: 14;
+}
+
 
 #profileSelectionBox {
     -fx-background-color: linear-gradient(to bottom, #ffffff, #e6e6e6);
@@ -51,13 +67,16 @@
     -fx-background-color: linear-gradient(to bottom right, white, #fbb304);
     -fx-background-radius: 10px;
     -fx-border-radius: 10px;
+    -fx-font-size: 20;
 }
 
 #addButtonPane:hover{
-    -fx-background-color: linear-gradient(to bottom right, #fbb304, white);
+    -fx-font-size: 20;
+    -fx-effect: dropshadow(gaussian, rgba(52, 152, 219, 0.7), 15, 0.4, 0, 0);
+
 }
 
-.button {
+* {
     -fx-font-family: "Helvetica";
     font-family: "Helvetica";
     -fx-font-weight: bold;
